    compiles a clause expression into a dialect- and parameter- 
    specific Compiled object.  It is the user's responsibility to
    manage the size of this dictionary, which will have keys
    corresponding to the dialect, clause element, the column
    names within the VALUES or SET clause of an INSERT or UPDATE, 
    as well as the "batch" mode for an INSERT or UPDATE statement.
    
- ext
  - the compiler extension now allows @compiles decorators
    on base classes that extend to child classes, @compiles
    decorators on child classes that aren't broken by a 
    @compiles decorator on the base class.
   
  - Declarative will raise an informative error message
    if a non-mapped class attribute is referenced in the
    string-based relationship() arguments.

  - Further reworked the "mixin" logic in declarative to 
    additionally allow __mapper_args__ as a @classproperty
    on a mixin, such as to dynamically assign polymorphic_identity.

- postgresql
  - Postgresql now reflects sequence names associated with 
    SERIAL columns correctly, after the name of of the sequence
    has been changed.  Thanks to Kumar McMillan for the patch.
    [ticket:1071]
    
  - Repaired missing import in psycopg2._PGNumeric type when 
    unknown numeric is received.

  - psycopg2/pg8000 dialects now aware of REAL[], FLOAT[], 
    DOUBLE_PRECISION[], NUMERIC[] return types without
    raising an exception.
    
- oracle
  - Now using cx_oracle output converters so that the
    DBAPI returns natively the kinds of values we prefer:
    - NUMBER values with positive precision + scale convert
      to cx_oracle.STRING and then to Decimal.   This 
      allows perfect precision for the Numeric type when
      using cx_oracle.  [ticket:1759]
    - STRING/FIXED_CHAR now convert to unicode natively.
      SQLAlchemy's String types then don't need to 
      apply any kind of conversions.

- firebird
   - The functionality of result.rowcount can be disabled on a