@@ -11,7 +11,8 @@ from testing import \
      exclude, \
      emits_warning_on,\
      skip_if,\
-     fails_on
+     fails_on,\
+     fails_on_everything_except
 
 import testing
 import sys
@@ -244,6 +245,13 @@ def sane_rowcount(fn):
     return _chain_decorators_on(
         fn,
         skip_if(lambda: not testing.db.dialect.supports_sane_rowcount)
+    )
+
+def reflects_pk_names(fn):
+    """Target driver reflects the name of primary key constraints."""
+    return _chain_decorators_on(
+        fn,
+        fails_on_everything_except('postgresql')
     )
     
 def python2(fn):
